[package]
name = "hnews"
documentation = "https://docs.rs/hnews"
homepage = "https://github.com/Elinvynia/hnews"
repository = "https://github.com/Elinvynia/hnews.git"
keywords = ["hackernews", "hacker", "news", "api", "sync", "lightweight", "fast", "simple", "safe"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2018"

[dependencies]
miniserde = "0.1"
ureq = "2.0"
