[package]
name = "hnews"
description = "Hacker News API, synchronous and lightweight, thanks to ureq and miniserde!"
documentation = "https://docs.rs/hnews"
homepage = "https://github.com/Elinvynia/hnews"
repository = "https://github.com/Elinvynia/hnews.git"
keywords = ["hackernews", "api", "sync", "simple", "safe"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.3.1"
edition = "2018"

[dependencies]
miniserde = "0.1"
ureq = "2.0"
once_cell = "1.5"
arc-swap = "1.2"
